--- a/settings/document.tex
+++ b/settings/document.tex
@@ -8,18 +8,18 @@
 % T2\_2000 Project Thesis (Semester 3 & 4)
 % T2\_3100 Seminar Paper (Semester 5 & 6)
 % T2\_3300 Bachelor Thesis
-\newcommand{\documentType}{T2\_3300}
+\newcommand{\documentType}{T2\_3000}
 
 \newcommand{\multipleAuthors}{false}
-\newcommand{\documentAuthor}{Max Mustermann}
-\newcommand{\documentTitle}{Titel der Arbeit}
+\newcommand{\documentAuthor}{Raphael Sack}
+\newcommand{\documentTitle}{Entwicklung einer wiederverwendbaren Benutzerschnittstelle in einer Microservicearchitektur}
 \newcommand{\documentPeriod}{12 Wochen}
 
-\newcommand{\matriculationNumber}{1234510}
+\newcommand{\matriculationNumber}{1879702}
 
-\newcommand{\locationUniversity}{Heidenheim}
+\newcommand{\locationUniversity}{Horb am Neckar}
 \newcommand{\department}{Informatik}
-\newcommand{\course}{TINF2014MI}
+\newcommand{\course}{TINFHOR20}
 
 \newcommand{\degree}{Bachelor of Science}
 % INF2014 - INF2016 (MI):       Bachelor of Science
@@ -31,13 +31,13 @@
 % Whether to show the lecture on cover
 \newcommand{\showLecture}{false}
 
-\newcommand{\releaseDate}{September 20XX}
-\newcommand{\releaseLocation}{Abgabeort}
+\newcommand{\releaseDate}{September 2023}
+\newcommand{\releaseLocation}{Stuttgart}
 
-\newcommand{\companyName}{Firma GmbH}
-\newcommand{\companyLocation}{Firmenort}
+\newcommand{\companyName}{Komm.ONE AöR}
+\newcommand{\companyLocation}{Stuttgart}
 
 \newcommand{\tutor}{Dipl.-Ing.~(FH) Peter Pan}
-\newcommand{\evaluator}{Prof. Dr.\ Rolf Assfalg}
+\newcommand{\evaluator}{Dipl.-Verww.~(FH) Dorothee Böhm}
 
-\newcommand{\linkColor}{00007A}
+\newcommand{\linkColor}{0000aa}
