--- a/settings/main.tex
+++ b/settings/main.tex
@@ -8,7 +8,7 @@
 
 %% Fonts
 %% palatino, goudysans, lmodern or libertine
-\newcommand{\documentFont}{lmodern}
+\newcommand{\documentFont}{libertine}
 
 %% Margin
 \newcommand{\margin}{2.5cm}
