--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -1,31 +1,20 @@
-@book{baumgartner:2002,
-	title = {E-Learning Praxishandbuch : Auswahl von Lernplattformen; Marktübersicht, Funktionen, Fachbegriffe},
-	author = {Baumgartner, Peter and Häfele, Hartmut and Maier-Häfele, Kornelia},
-	address = {Innsbruck},
-	publisher = {StudienVerl.},
-	year = {2002},
-	isbn = {3-7065-1771-X}
+﻿% This file was created with Citavi 6.12.0.0
+
+@misc{angular.17.01.2023,
+ author = {Angular},
+ year = {2023},
+ title = {Angular},
+ url = {https://angular.io/},
+ urldate = {20.01.2023}
 }
 
-@TechReport{dreyfus:1980,
-	author = {Stuard E. Dreyfus and Hubert L. Dreyfus},
-	title = {A Five-Stage Model Of The Mental Activities Involved In Directed Skill Acquisition},
-	institution = {University of California, Berkley},
-	year = {1980},
-	url = {http://www.dtic.mil/cgi-bin/GetTRDoc?AD=ADA084551&Location=U2&doc=GetTRDoc.pdf},
+
+@misc{Primeng.20.01.2023,
+ author = {PrimeTek},
+ year = {2023},
+ title = {PrimeNG Setup},
+ url = {https://www.primefaces.org/primeng/setup},
+ urldate = {20.01.2023}
 }
 
-@Online{fsf:2007,
-	author = {{Free Software Foundation}},
-	title = {{GNU AFFERO GENERAL PUBLIC LICENSE}},
-	url = {http://www.gnu.org/licenses/agpl-3.0.de.html},
-	year = {2007}
-}
 
-@Unpublished{mustermann:2012,
-	author = {Max Mustermann},
-	title = {tolles Musterthema},
-	year = {2012},
-	address = {Musterstadt},
-	note = {Studienarbeit}
-}
