--- a/settings/document.tex
+++ b/settings/document.tex
@@ -17,7 +17,7 @@
 
 \newcommand{\matriculationNumber}{1879702}
 
-\newcommand{\locationUniversity}{Horb am Neckar}
+\newcommand{\locationUniversity}{Stuttgart, Campus Horb}
 \newcommand{\department}{Informatik}
 \newcommand{\course}{TINFHOR20}
 
@@ -37,7 +37,7 @@
 \newcommand{\companyName}{Komm.ONE AöR}
 \newcommand{\companyLocation}{Stuttgart}
 
-\newcommand{\tutor}{Dipl.-Ing.~(FH) Peter Pan}
+\newcommand{\tutor}{Dipl.-Verww.~(FH) Dorothee Böhm}
 \newcommand{\evaluator}{Dipl.-Verww.~(FH) Dorothee Böhm}
 
 \newcommand{\linkColor}{0000aa}
