--- a/lang/de.tex
+++ b/lang/de.tex
@@ -12,14 +12,14 @@
 
 \newcommand{\tutorPhrase}{%
 	\IfStrEqCase{\documentType}{%
-		{T2\_1000}{Gutachter}%
-      	{T2\_2000}{Gutachter}%
-      	{T2\_3100}{Gutachter}%
-      	{T2\_3300}{Erstgutachter}%
-	}[Gutachter]
+		{T2\_1000}{Gutachterin}%
+      	{T2\_2000}{Gutachterin}%
+      	{T2\_3100}{Gutachterin}%
+      	{T2\_3300}{Erstgutachterin}%
+	}[Gutachterin]
 }
 
-\newcommand{\evaluatorPhrase}{Zweitgutachter}
+\newcommand{\evaluatorPhrase}{Zweitgutachterin}
 \newcommand{\restrictionNoticesPhrase}{Sperrvermerk}
 \newcommand{\declarationPhrase}{Erklärung}
 \newcommand{\glossaryPhrase}{Glossar}
@@ -33,6 +33,7 @@
   \IfStrEqCase{\documentType}{%
       {T2\_1000}{Projektarbeit}%
       {T2\_2000}{Projektarbeit}%
+      {T2\_3000}{Projektarbeit}
       {T2\_3100}{Studienarbeit}%
       {T2\_3300}{Bachelorarbeit}%
   }[{\documentType\ignorespaces}]
