--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -1,11 +1,30 @@
 ﻿% This file was created with Citavi 6.12.0.0
 
+@misc{Angular.02.02.2023,
+ author = {Angular},
+ year = {02.02.2023},
+ title = {Angular - Basics of testing components},
+ url = {https://angular.io/guide/testing-components-basics},
+ urldate = {13.02.2023}
+}
+
+
 @misc{angular.17.01.2023,
  author = {Angular},
  year = {2023},
  title = {Angular},
  url = {https://angular.io/},
  urldate = {20.01.2023}
+}
+
+
+@misc{dshaps.16.06.2016,
+ author = {dshaps},
+ editor = {Medium},
+ year = {2016},
+ title = {Understanding Component-Based Architecture},
+ url = {https://medium.com/@dan.shapiro1210/understanding-component-based-architecture-3ff48ec0c238},
+ urldate = {13.02.2023}
 }
 
 
