--- a/main.tex
+++ b/main.tex
@@ -34,9 +34,9 @@
 	\input{ads/declaration}
 	\newpage
 
-	% Abstract
-	\input{content/abstract}
-	\newpage
+	% % Abstract
+	% \input{content/abstract}
+	% \newpage
 
         % only page number in footer
 	\pagestyle{plain}
@@ -58,19 +58,19 @@
 	\newpage
 
 	% Acronyms
-	\cleardoublepage
-    \input{content/acronyms}
+	% \cleardoublepage
+    % \input{content/acronyms}
 
 	% List of Figures
-	\cleardoublepage
-	\listoffigures
+	% \cleardoublepage
+	% \listoffigures
 
 	%List of Tables
-	\cleardoublepage
-	\listoftables
+	% \cleardoublepage
+	% \listoftables
 
 	% List of Listings
-	\cleardoublepage
+	% \cleardoublepage
 	\lstlistoflistings
 	\cleardoublepage
 
@@ -100,9 +100,6 @@
 	\printglossary[style=altlist,title=\glossaryPhrase]
 	\input{content/glossary}
 	
-	% Appendix
-	\clearpage
-	\appendix
-	\input{content/appendix}
+	
 	
 \end{document}
